// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.set.acceptance given: [case1] route.stone.set --as passed when: [t0] stone has artifact then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed (unguarded)
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.set.acceptance given: [case1] route.stone.set --as passed when: [t1] stone has no artifact then: stderr matches snapshot 1`] = `
"error: BadRequestError: artifact not found; run route.stone.get --stone 1.vision --say to see instructions

{
  "stone": "1.vision"
}
"
`;

exports[`driver.route.set.acceptance given: [case2] route.stone.set --as approved when: [t0] agent tries to approve then: stderr matches snapshot 1`] = `""`;

exports[`driver.route.set.acceptance given: [case2] route.stone.set --as approved when: [t0] agent tries to approve then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ ✗ only humans can approve
   │
   └─ as a driver, you should:
         ├─ \`--as passed\` to signal work complete, proceed
         ├─ \`--as arrived\` to signal work complete, request review
         └─ \`--as blocked\` to escalate if stuck

      the human will run \`--as approved\` when ready.
"
`;

exports[`driver.route.set.acceptance given: [case3] route.stone.set --as passed with guard (allowed) when: [t0] guarded stone with review + judge that pass then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: echo (l1, 1/∞)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 1 nitpick 🟠
   │   └─ review: .reviews/peer/1.test._.review.i1.35e3128f097925a158.r1._.given.by_peer.echo.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.test*.md
   │  ├─ reviews
   │  │   └─ r1: echo (l1, 1/∞)
   │  │       ├─ rejected [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 1 nitpick 🟠
   │  │       └─ review: .reviews/peer/1.test._.review.i1.35e3128f097925a158.r1._.given.by_peer.echo.md
   │  └─ judges
   │      └─ j1: echo "passed: true\\nreason: all checks passed"
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.set.acceptance given: [case4] route.stone.set --as passed with guard (blocked) when: [t0] guarded stone with review + judge that fail then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  passed: false
   │  │  reason: blockers exceed threshold (3 > 0)
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  └─
"
`;

exports[`driver.route.set.acceptance given: [case4] route.stone.set --as passed with guard (blocked) when: [t0] guarded stone with review + judge that fail then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: echo (l1, 1/∞)
   │   ├─ rejected [TIME]
   │   ├─ 3 blockers 🔴
   │   ├─ 1 nitpick 🟠
   │   └─ review: .reviews/peer/2.blocked._.review.i1.fb9cffb3eb889d2f8e.r1._.given.by_peer.echo.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 2.blocked
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (3 > 0)
   └─ guard
      ├─ artifacts
      │   └─ $route/2.blocked*.md
      ├─ reviews
      │   └─ r1: echo (l1, 1/∞)
      │       ├─ rejected [TIME]
      │       ├─ 3 blockers 🔴
      │       ├─ 1 nitpick 🟠
      │       └─ review: .reviews/peer/2.blocked._.review.i1.fb9cffb3eb889d2f8e.r1._.given.by_peer.echo.md
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers exceed threshold (3 > 0)"
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (3 > 0)
"
`;

exports[`driver.route.set.acceptance given: [case5] route.stone.set with flexible pattern lookup when: [t0] partial pattern matches single stone then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed (unguarded)
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.set.acceptance given: [case5] route.stone.set with flexible pattern lookup when: [t1] numeric prefix pattern agent approval locked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.criteria
   ├─ ✗ only humans can approve
   │
   └─ as a driver, you should:
         ├─ \`--as passed\` to signal work complete, proceed
         ├─ \`--as arrived\` to signal work complete, request review
         └─ \`--as blocked\` to escalate if stuck

      the human will run \`--as approved\` when ready.
"
`;

exports[`driver.route.set.acceptance given: [case6] route.stone.set with ambiguous pattern (failfast) when: [t0] pattern matches multiple stones then: stderr matches snapshot 1`] = `
"error: BadRequestError: pattern "." matched 3 stones; be more specific

{
  "pattern": ".",
  "matched": [
    "1.vision",
    "2.criteria",
    "3.plan"
  ]
}
"
`;

exports[`driver.route.set.acceptance given: [case7] route.stone.set --as passed with guard (cached) when: [t0] second run with same artifact reuses cached results then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: echo (l1, 1/∞)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 1 nitpick 🟠
   │   └─ review: .reviews/peer/1.test._.review.i1.faa07cdc907435dee8.r1._.given.by_peer.echo.md

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.test*.md
   │  ├─ reviews
   │  │   └─ r1: echo (l1, 1/∞)
   │  │       ├─ rejected, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 1 nitpick 🟠
   │  │       └─ review: .reviews/peer/1.test._.review.i1.faa07cdc907435dee8.r1._.given.by_peer.echo.md
   │  └─ judges
   │      └─ j1: echo "passed: true\\nreason: all checks passed"
   │          └─ · cached
   │             └─ on $route/1.test*.md
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.set.acceptance given: [case8] route.stone.set --as rewound when: [t0] rewind a single stone with guard artifacts then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ deleted: 1 reviews, 1 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.acceptance given: [case8] route.stone.set --as rewound when: [t1] cascade rewind affects subsequent stones then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.criteria
   ├─ cascade
   │  ├─ 2.criteria
   │  │  ├─ deleted: 1 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ deleted: 1 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.acceptance given: [case8] route.stone.set --as rewound when: [t2] rewind invalidates prior approval then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.acceptance given: [case8] route.stone.set --as rewound when: [t3] idempotent rewind (twice) then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;
